调试：显示查询参数

--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,8 @@
     "database": "express-api-development",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "timezone": "+08:00"
+    "timezone": "+08:00",
+    "logQueryParameters": true
   },
   "test": {
     "username": "root",
