--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Ignore Node.js files.
 /node_modules
+
+# Ignore environment files.
+/.env
+
+# Ignore editor files.
+/.idea
+/.vscode
+
+# Ignore system files.
+.DS_Store
+Thumbs.db
+
+# Ignore Docker data.
 /data
-.env
