--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer-aliyun-oss": "^2.1.3",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.4"
   }
