--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 NODE_ENV=development
 PORT=3000
 SECRET=
-ALIYUN_ACCESS_KEY_ID=
-ALIYUN_ACCESS_KEY_SECRET=
-ALIYUN_BUCKET=
-ALIYUN_REGION=
+# 阿里云oss
+ALIYUN_ACCESS_KEY_ID=阿里云的 AccessKey ID
+ALIYUN_ACCESS_KEY_SECRET=阿里云的 AccessKey Secret
+ALIYUN_BUCKET=阿里云 OSS 的 Bucket 名称
+ALIYUN_REGION=阿里云 OSS Bucket 所在地域名称
+# QQ邮箱
+MAILER_HOST=邮件服务器地址
+MAILER_PORT=邮件服务器端口
+MAILER_SECURE=465端口填写：true，否则填写：false
+MAILER_USER=你的邮箱地址
+MAILER_PASS=你的邮箱授权码或密码
+
