--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,5 @@ MAILER_PORT=邮件服务器端口
 MAILER_SECURE=465端口填写：true，否则填写：false
 MAILER_USER=你的邮箱地址
 MAILER_PASS=你的邮箱授权码或密码
-
+# 消息队列
+RABBITMQ_URL=配置为消息队列服务器地址
