--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,13 @@ services:
       - "6379:6379"
     volumes:
       - ./data/redis:/data
+  rabbitmq:
+    image: rabbitmq:4.0-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ./data/rabbitmq:/var/lib/rabbitmq # 持久化数据
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: 123456
