--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "nodemon": "^3.1.9",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
     "svg-captcha": "^1.4.0",
-    "uuid": "^11.0.4"
+    "uuid": "^11.0.4",
+    "winston": "^3.17.0",
+    "winston-mysql": "^1.1.1"
   }
 }
