--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "format:check": "prettier --check \"**/*.{js,json,md}\"",
+    "format": "prettier --write \"**/*.{js,json,md}\""
   },
   "dependencies": {
     "ali-oss": "^6.22.0",
@@ -30,5 +32,8 @@
     "uuid": "^11.0.4",
     "winston": "^3.17.0",
     "winston-mysql": "^1.1.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.1"
   }
 }
