--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ali-oss": "^6.22.0",
     "amqplib": "^0.10.5",
+    "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-aliyun-oss": "^2.1.3",
     "mysql2": "^3.12.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "redis": "^4.7.0",
