简化为模板

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "express-api",
-    "database": "express-api-development",
+    "password": "vue-admin-api",
+    "database": "vue-admin-api-development",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "timezone": "+08:00",
@@ -11,7 +11,7 @@
   "test": {
     "username": "root",
     "password": null,
-    "database": "express-api-test",
+    "database": "vue-admin-api-test",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "timezone": "+08:00"
@@ -19,7 +19,7 @@
   "production": {
     "username": "root",
     "password": null,
-    "database": "express-api-production",
+    "database": "vue-admin-api-production",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "timezone": "+08:00"
