--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,27 @@
 services:
   mysql:
     image: mysql:8.3.0
-    command:
-      --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=mysql_native_password
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_general_ci
     environment:
-      - MYSQL_ROOT_PASSWORD=express-api
+      - MYSQL_ROOT_PASSWORD=vue-admin-api
       - MYSQL_LOWER_CASE_TABLE_NAMES=0
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - ./data/mysql:/var/lib/mysql
   redis:
     image: redis:7.4
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - ./data/redis:/data
   rabbitmq:
     image: rabbitmq:4.0-management
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - '5672:5672'
+      - '15672:15672'
     volumes:
       - ./data/rabbitmq:/var/lib/rabbitmq # 持久化数据
     environment:
